namespaces/live.cloud-platform.service.justice.gov.uk/courtfines-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: courtfines-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMCTS"
    cloud-platform.justice.gov.uk/slack-channel: "dts-legacy-cloud-platform-apps"
    cloud-platform.justice.gov.uk/application: "Court fines"
    cloud-platform.justice.gov.uk/owner: "DTS Legacy apps support: dts-legacy-apps-support-team@hmcts.net"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmcts-courtfines"
    cloud-platform.justice.gov.uk/team-name: "dts-legacy"
    cloud-platform.justice.gov.uk/review-after: ""
